# NYC-Taxi-ETL

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile
airflow/dags/: monitoring.py  nyc_taxi_etl.py
airflow/plugins/: callbacks.py
dagster_project/: Dockerfile  workspace.yaml
dagster_project/nyc_taxi/: definitions.py  jobs.py  partitions.py  resources.py  sensors.py
dagster_project/nyc_taxi/assets/: __init__.py  extract.py  marts.py  ops.py  staging.py
dagster_project/nyc_taxi/checks/: __init__.py  quality.py
shared/: __init__.py  alerts.py  anomaly.py  config.py  db.py  extract.py  load.py  logging_config.py  quality_checks.py  schema.py  transform.py
sql/ddl/: 001_raw.sql  002_staging.sql  003_marts.sql  004_metrics.sql
sql/transformations/: dim_zone.sql  fct_daily_trips.sql  record_row_count.sql
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_dagster_definitions.py  test_quality.py  test_schema.py  test_transform.py
