[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-etl"
version = "0.1.0"
description = "Production ETL pipeline for NYC Taxi trip data, orchestrated with Airflow and Dagster."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["shared*", "dagster_project*"]
exclude = ["tests*", "airflow*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["airflow/dags", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.dagster]
module_name = "dagster_project.nyc_taxi.definitions"
